# esp32-dma-multicore-tftlcd

./: Cargo.toml  Readme.md
.cargo/: config.toml
src/: config.rs  main.rs  raw_framebuffer.rs
